--- a/dmowrapconfig.yaml
+++ b/dmowrapconfig.yaml
@@ -5,6 +5,7 @@ NodePass: password
 WalletAddr: somereceivingaddress
 
 # DMO-monitor info
+# NOTE: Leave blank if you are not using a DynMiner executable that supports dmo-monitor integration
 StatRpcUrl: http://192.168.1.174:11235/minerstats
 
 # How often to restart your miner
