--- a/dmowrapconfig.yaml
+++ b/dmowrapconfig.yaml
@@ -15,7 +15,7 @@ MinerOpts: ["GPU,8192,8,0,0"]
 # MinerName is used when pool mining and/or using dmo monitor
 MinerName: MyCoolMiner
 
-# How often to restart your miner
+# How often to restart your miner. Use 0 to never restart
 RespawnSeconds: 1200
 
 # DMO Monitor Related Options -- leave blank if not using dmo-monitor
