--- a/windows/dmowrapconfig.yaml
+++ b/windows/dmowrapconfig.yaml
@@ -1,11 +1,11 @@
 # The name of your DynMiner executable
-DynMiner: DynMiner2.exe
+DynMiner: "DynMiner.exe"
 
 # This is the wallet to mine to, used for ALL MODES
-WalletAddr: somereceivingaddress
+WalletAddr: "somereceivingaddress"
 
-# Mode should be either: solo, pool, or stratum
-Mode: solo
+# Mode should be either: solo, pool, stratum, or SRB
+Mode: "solo"
 
 # Miner Options for DynMiner, eg: "GPU,65536,64,0,0" or "CPU,16"
 # To multi-gpu mine, just add more values to the array below like this
@@ -17,23 +17,33 @@ MinerOpts: ["GPU,8192,8,0,0"]
 # To do go, please surround the environment variable you wish to pull the minername from in $ as follows:
 # In this example, the environment variable is COMPUTERNAME
 # MinerName: $COMPUTERNAME$
-MinerName: MyCoolMiner
+MinerName: "MyCoolMiner"
 
 # How often to restart your miner. Use 0 to never restart
 RespawnSeconds: 1200
 
 # DMO Monitor Related Options -- leave blank if not using dmo-monitor
-CloudKey: SOME_CLOUD_KEY
+# You can find your cloud key in My Account on dmo-monitor.com
+CloudKey: "SOME_CLOUD_KEY"
 
-## Solo Mining Fullnode info, can be ignored or removed for pool/stratum mining
-NodeUrl: http://192.168.1.150:6434
-NodeUser: username
-NodePass: password
+## SRB Mining Options -- leave blank or ignore if not using SRBMiner
+SRBMiner: "SRBMiner-MULTI.exe"
+SRBPoolUrl: "pool1.dynamocoin.org:4567"
+SRBMode: "CPU" # CPU or GPU here
+# Uncomment to add additional options that I may not know about. Example for --cpu-threads shown
+#SRBAdditionalOpts: ["--cpu-threads", "7"]
+## END SRB Options
+
+
+## Foundation Miner Solo Mining Fullnode info, can be ignored or removed for pool/stratum mining
+NodeUrl: "http://192.168.1.150:6434"
+NodeUser: "username"
+NodePass: "password"
 ## END Solo mining section
 
 
-## Pool or Stratum Options, can be ignored or removed for solo mining against a local node
-PoolServer: us-east.deepfields.io
+## Foundation Miner Pool or Stratum Options, can be ignored or removed for solo mining against a local node
+PoolServer: "us-east.deepfields.io"
 PoolPort: 4234
 StartingDiff: 3
 ##  END Pool/Stratum section
