Another little example config update

--- a/example_configs/solo_foundation_example.yaml
+++ b/example_configs/solo_foundation_example.yaml
@@ -5,6 +5,7 @@ Mode: "solo"
 WalletAddr: "your_wallet_address"
 
 # Your full node info
+# Your NodeUrl will NEED to be updated to match whatever the IP and PORT are for your local node!
 NodeUrl: "http://192.168.1.181:6433"
 NodeUser: "your_node_username"
 NodePass: "your_node_password"
